# YMM4EmotionMekerKIT

./: .gitignore  README.md  THIRD-PARTY-LICENSES.md  package-lock.json  package.json  pyproject.toml
backend/: build_backend.py  run_server.py  setup_venv.py  ymm4_backend.spec
backend/app/: config.py  emotion_lexicon.py  emotion_postprocess.py  expression_mapper.py  face_item_builder.py  grouping.py  main.py  persona_prior.py  personalization.py  preset_loader.py  psd_loader.py  text_normalize.py  timing_engine.py  training_store.py  ymm4_settings.py  ymmp_parser.py
backend/app/emotion/: base.py  bert_analyzer.py  llm_analyzer.py
backend/data/training/: labels.jsonl
backend/tests/: __init__.py  test_llm_analyzer.py
docs/: implementation_plan_v2.html
electron/: main.js  preload.js
frontend/: mockup.html  next.config.js  package-lock.json  package.json  postcss.config.mjs
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: AnalysisOptimizerModal.tsx  CharacterList.tsx  DialogueList.tsx  EmotionDonut.tsx  EmotionGuide.tsx  EmotionMapping.tsx  ExecuteModal.tsx  ExecutePanel.tsx  HeaderBar.tsx  HelpModal.tsx  LexiconPanel.tsx  MappingPanel.tsx  OverrideEditorContext.tsx  PersonaMap.tsx  PostProcessSettings.tsx  PresetHoverButton.tsx  PresetPreview.tsx  PreviewPartsPanel.tsx  ProjectLoader.tsx  PsdLayerPanel.tsx  SavePresetForm.tsx  SceneTabBar.tsx  SettingsModal.tsx  TimelinePreview.tsx  TrainingLabeler.tsx  VoiceDetailPanel.tsx
frontend/src/lib/: api.ts  psd.ts  (+1 more)
scripts/: build-backend.js  dev.js  resolve-python.js  start.py
