[project]
name = "ymm4-emotion-face"
version = "0.1.0"
description = "YMM4 表情アイテム自動配置ツール"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "pyyaml>=6.0",
    "transformers>=4.45",
    "torch>=2.4",
    "fugashi>=1.3",
    "unidic-lite>=1.0.8",
    "psd-tools>=1.17",
]

[project.optional-dependencies]
llm = ["anthropic", "openai"]
dev = ["pytest", "httpx"]

[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"
